--- a/BlogExercise/Podfile
+++ b/BlogExercise/Podfile
@@ -3,6 +3,7 @@
 
 target 'BlogExercise' do
   # Comment the next line if you don't want to use dynamic frameworks
+  pod 'Alamofire', '~> 5.2'
   use_frameworks!
 
   # Pods for BlogExercise
