-added fav button - added material io

--- a/BlogExercise/Podfile
+++ b/BlogExercise/Podfile
@@ -4,6 +4,8 @@
 target 'BlogExercise' do
   # Comment the next line if you don't want to use dynamic frameworks
   pod 'Alamofire', '~> 5.2'
+  pod 'FaveButton'
+  pod  'MaterialComponents'
   use_frameworks!
 
   # Pods for BlogExercise
